--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "eventemitter3": "^5.0.1",
     "express": "^4.18.2",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "nodex",
   "description": "\"Nodex\" is a versatile boilerplate for Node.js applications, offering a solid foundation for various project types, including web applications, RESTful APIs, and server-side applications. With \"Nodex,\" you can kickstart your development process with confidence.",
@@ -37,6 +39,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.5",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.6.5",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
@@ -49,7 +52,7 @@
     "src/**/*.{ts,tsx}": [
       "npm run format"
     ]
-  },  
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
