--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.14.0"
   },
   "name": "nodex",
   "description": "\"Nodex\" is a versatile boilerplate for Node.js applications, offering a solid foundation for various project types, including web applications, RESTful APIs, and server-side applications. With \"Nodex,\" you can kickstart your development process with confidence.",
@@ -41,6 +42,7 @@
     "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.10",
     "@types/node": "^20.6.5",
+    "@types/pdfkit": "^0.13.2",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "nodemon": "^3.0.1",
